LPS-95302 - Fix portlet topper overlapping

--- a/modules/apps/frontend-theme/frontend-theme-classic/src/css/portlet/_portlet.scss
+++ b/modules/apps/frontend-theme/frontend-theme-classic/src/css/portlet/_portlet.scss
@@ -61,7 +61,7 @@
 
 	&:hover, &.open {
 		> .portlet-topper {
-			z-index: 1050;
+			z-index: 999;
 		}
 	}
 }
